--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ button {
     background-color: #007bff;
     color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 2% 4%;
     border-radius: 5px;
     cursor: pointer;
 }
